syntax = "proto3";

package characters;

service API {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
    string class = 1;
    int32 level = 2;
    string name = 3;
    int32 health_points = 4;
    int32 armor_class = 5;
    int32 strength = 6;
    int32 dexterity = 7;
    int32 constitution = 8;
    int32 intelligence = 9;
    int32 wisdom = 10;
    int32 charisma = 11;
}

message CreateResponse {
    Character character = 1;
}

message RetrieveRequest {
    string id = 1;
}

message RetrieveResponse {
    Character character = 1;
}

message UpdateRequest {
    optional string class = 1;
    optional int32 level = 2;
    optional string name = 3;
    optional int32 health_points = 4;
    optional int32 armor_class = 5;
    optional int32 strength = 6;
    optional int32 dexterity = 7;
    optional int32 constitution = 8;
    optional int32 intelligence = 9;
    optional int32 wisdom = 10;
    optional int32 charisma = 11;
}

message UpdateResponse {
    Character character = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {}

message Character {
    string id = 1;
    string class = 2;
    int32 level = 3;
    string name = 4;
    int32 health_points = 5;
    int32 armor_class = 6;
    int32 strength = 7;
    int32 dexterity = 8;
    int32 constitution = 9; 
    int32 intelligence = 10;
    int32 wisdom = 11;
    int32 charisma = 12;
}